Fix hint safari nowrap

--- a/src/omnibox.css
+++ b/src/omnibox.css
@@ -23,6 +23,7 @@
 .omn-hint {
   display: flex;
   color: #2559c9;
+  white-space: nowrap;
   text-wrap: nowrap;
 }
 
